--- a/blog/src/layouts/BaseLayout.astro
+++ b/blog/src/layouts/BaseLayout.astro
@@ -1,5 +1,9 @@
 ---
-const { title } = Astro.props;
+type Props = {
+  title: string;
+  meta: string;
+};
+const { title, meta } = Astro.props;
 ---
 
 <html lang="en">
@@ -8,6 +12,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta name="description" content={meta} />
     <title>{title}</title>
   </head>
   <body>
