--- a/blog/src/pages/post/[slug].astro
+++ b/blog/src/pages/post/[slug].astro
@@ -33,7 +33,7 @@ const props = Astro.props;
 
 <BaseLayout title={`${props.post.title} | Coasting Along`} meta={props.post.meta}>
   <h1>{props.post.title}</h1>
-  {props.post.subheading !== undefined && <h4>{props.post.subheading}</h4>}
+  {props.post.subheading !== undefined && <strong>{props.post.subheading}</strong>}
   <div>by {props.post.authors.map((author) => author.name).join(" ")}</div>
   <PortableText portableText={props.post.mainImage} />
   <div>{props.post.categories.map((catagory) => catagory.title).join(" ")}</div>
