--- a/blog/src/components/PortableTextImage.astro
+++ b/blog/src/components/PortableTextImage.astro
@@ -10,7 +10,7 @@ const webpUrl = urlForImage(asset).width(800).height(400).format("webp").url();
 <figure>
   <picture>
     <source srcset={webpUrl} type="image/webp" />
-    <img class="responsive__img" src={url} />
+    <img class="responsive__img" src={url} alt="" width="800" height="800" />
   </picture>
   <figcaption>{alt}</figcaption>
 </figure>
