--- a/blog/src/pages/index.astro
+++ b/blog/src/pages/index.astro
@@ -8,7 +8,7 @@ const posts = await useSanityClient().fetch<Array<Post>>(`*[_type == "post"]`);
 
 <BaseLayout
   title="Home Page"
-  meta="Join Ruby and Ted on Coasting Along as they explore Australia from coast to coaster. Discover travel adventures, remote work tips, surfing spots, and mouth-watering food experiences."
+  metaDescription="Join Ruby and Ted on Coasting Along as they explore Australia from coast to coaster. Discover travel adventures, remote work tips, surfing spots, and mouth-watering food experiences."
 >
   <h1>Coasting Along</h1>
   {
